<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/preffred_location"
        android:inputType="text"
        android:singleLine="true"
        android:defaultValue="@string/preffered_location_value"
        android:key="@string/preffered_location_key"/>

   <ListPreference
        android:key="preffered_temperature_key"
        android:entries="@array/temperature_selection"
        android:entryValues="@array/temperature_values"
        android:title="@string/preffered_temp_names"
        android:summary="@string/preffered_temp_summary"
        android:defaultValue="@+string/celcius"
       />

</PreferenceScreen>